crates/compiler/src/tests/e2e/bad/0036_let_unknown_token_in_block/main.gom
fn main() {
    let multiline = "hello \
                     world";
    println(multiline);
    
    let with_escapes = "tab:\tnewline:\nquote:\"done";
    println(with_escapes);
}
